test/badMeasurement1.slq

def main()mfree⇒measure(H(0)); /// error
